syntax ="proto3";

package protoc;

message Sku {
    int64 Id = 1;
    string SkuName =2;
    int64 Price = 3;
    int64 PriceUnit = 5;
    string PluCode =6;
    float Stock = 7;
    int32 IsOn = 8;
    int64 YoyoCode=9;
    string ImageUrl=10;
    string DisplayName=11;
    int32 IsLock=12;
}

message SkuList {
    repeated Sku sku = 1;
}