syntax="proto3";

package protoc;

message YoyoInfo {
    string Name =1;
    int64 YoyoCode =2;
    string YoyoVersionCode=3;
    string ImageUrls=4;
    string NickName=5;
    string Introduce=6;
    string Composition=7;
    string Effect=8;
    string Collocation=9;
    string MatchColors=10;
    int32 FirstCategoryCode=11;
    string FirstCategoryName=12;
    int32 SecondCategoryCode=13;
    string SecondCategoryName=14;
    int32 ThirdCategoryCode=15;
    string ThirdCategoryName=16;
    int32 ForthCategoryCode=17;
    string ForthCategoryName=18;
}


message YoyoInfoList {
    repeated YoyoInfo YoyoInfo = 1;
}